fix: input form require fix: revalidation for each routes build: add statistics to each page style: move the form from behind the section nav

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,9 @@
     scrollbar-width: none; /* Firefox */
   }
 }
-
+.Toastify__toast {
+  text-transform: capitalize;
+}
 .bg-dotted {
   background: white;
   background-image: radial-gradient(black 1px, transparent 0);
